# genAI_LA_wildfires

./: README.md
LLMProxy/: .env.example  (+2 more)
py/: MANIFEST.in  README.md  pyproject.toml  requirements-data.txt  requirements.txt
py/examples/: generate_w_media.py  generate_w_websearch.py  multi-turn_assistant.py  upload_text.py  webpage_extract.py
py/wildfireRisk/: app.py  damage_inspection_service.py  doi_nonrenewal_service.py  fair_plan_service.py  fire_hazard_service.py  main.py  parse_fair_plan_pdf.py  risk_client.py  test_hazard.py  test_req.py  trend_analysis.py  upload_fairplanFacts.py  upload_retrofit_list.py  upload_zillowData.py  zhvi_service.py
py/wildfireRisk/RAG_upload_scripts/: upload_home_hardening.py  upload_wildfire_faq.py  upload_zillowData.py
py/wildfireRisk/backend/: app.py  risk_client.py
py/wildfireRisk/eval/: report_eval_cases.json  run_report_eval.py
py/wildfireRisk/eval/results/: report_eval_20260426_145853.json  report_eval_20260428_152653.json
py/wildfireRisk/insurance_datasets/: Residential-Insurance-Voluntary-Market-New-Renew-NonRenew-by-ZIP-2020-2023.xlsx  fair_plan_residential_exposure_zip.csv  insurance_renewal_DOI_data.csv
py/wildfireRisk/services/: chart_signal_service.py  damage_inspection_service.py  doi_nonrenewal_service.py  fair_plan_service.py  fire_hazard_service.py  fire_history_service.py  trend_analysis.py  zhvi_service.py  zillow_overlay_service.py
py/wildfireRisk/static/: index.html  report.html  style.css  style2.css
py/wildfireRisk/static_datasets/insurance_datasets/: fair_plan_residential_exposure_zip.csv  (+1 more)
(+21 files in other folders)
